feat: add static plugin autocomplete suggestions
